manifests/tetris-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    #alb.ingress.kubernetes.io/backend-protocol: HTTPS
    # Use this annotation (which must match a service name) to route traffic to HTTP2 backends.
    #alb.ingress.kubernetes.io/conditions.argogrpc: |
      #[{"field":"http-header","httpHeaderConfig":{"httpHeaderName": "Content-Type", "values":["application/grpc"]}}]
    #alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-2:134722888269:certificate/a808d8eb-a5e3-4615-a6a5-61dc3eab5d32  # Add your certificate ARN here
      #kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
  name: tetris-ingress
spec:
  ingressClassName: alb
  rules:
  - host: tetris-game.refactorq.com
    http:
      paths:
      - path: /
        backend:
          service:
            name: tetris-service
            port:
              number: 80
        pathType: Prefix
  tls:
  - hosts:
    - tetris-game.refactorq.com
